dons_tests/valid_kxi/newi_type_check.kxi
void main(){
    int[][][] x = new int[][][10];
}
