dons_tests/invalid_kxi/scope_out.kxi
void main(){
    {
        int y = 6;
    }
    y = 4;
}
